--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="CursoLogicaCapitulo02/src"/>
 	<classpathentry kind="src" path="CursoLogicaCapitulo03/src"/>
 	<classpathentry kind="src" path="CursoLogicaCapitulo04/src"/>
